fix: Adjusts overflow Y on Users

--- a/src/Pages/Profile/Style.less
+++ b/src/Pages/Profile/Style.less
@@ -29,6 +29,7 @@
 
 .ListUsers {
   width: 100%;
+  overflow-y: scroll;
 }
 
 .EditPasswordButton {
